# OpenGlPractice

./: Application  CMakeLists.txt  imgui.ini
res/shaders/: Basic.glsl
res/textures/: goku-on-cloud
src/: .#Renderer.cpp48908Tek  Application.cpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp  std_image.cpp
src/tests/: .#scratch.txt  TestClearColor.cpp  TestClearColor.hpp  TestMenu.hpp  TestTexture.cpp  TestTexture.hpp  scratch.txt  test.cpp  test.hpp
